# iotX

./: .directory  .gitignore  README.md
docs/: x-assistant.md
snap/: .directory  snapcraft.yaml
x-ass/: Makefile.am  configure.ac
x-ass/pioneer600/: Makefile.am  ds3231.c  pioneer600.h
x-ass/src/: Makefile.am  bmp180.c  driver_test.h  main.c  ssd1306.c  test_led.c  test_oled.c
x-assistant/: configure.ac
x-assistant/src/: Makefile.am  main.c
x-assistant/src/.deps/: blink-blink.Po  main.Po  oled-SSD1306.Po  oled-oled.Po
