AC_PREREQ(2.59)
AC_INIT([x-ass], [0.0.1], [vence2013@163.com])

AC_CONFIG_AUX_DIR([build-aux])  

AM_PROG_AR
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile 
                 src/Makefile 
                 pioneer600/Makefile])

AC_OUTPUT
